force-app/main/default/objects/Affiliate_Participation_Sync__e/Affiliate_Participation_Sync__e.object-meta.xml
<CustomObject>
    <description>Platform event used to receive participation rollup data synced from BTSP affiliate packaging orgs. Each event carries the 12 rollup field values and a Participation ID to identify the target Participation record.</description>
    <label>Affiliate Participation Sync</label>
    <pluralLabel>Affiliate Participation Syncs</pluralLabel>
</CustomObject>