force-app/main/default/objects/Affiliate_Participation_Sync__e/fields/BTSP_Participation_ID__c.field-meta.xml
<CustomField>
    <fullName>BTSP_Participation_ID__c</fullName>
    <description>Record ID of the source BTSP_Participation__c in the affiliate org, used for writeback.</description>
    <label>BTSP Participation ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>