force-app/main/default/objects/Affiliate_Participation_Sync__e/fields/Communication_Core_Attended__c.field-meta.xml
<CustomField>
    <fullName>Communication_Core_Attended__c</fullName>
    <description>Number of core communication touchpoints attended, synced from the affiliate BTSP packaging org.</description>
    <label>Communication Core Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>