force-app/main/default/objects/Affiliate_Participation_Sync__e/fields/Communication_Optional_Offered__c.field-meta.xml
<CustomField>
    <fullName>Communication_Optional_Offered__c</fullName>
    <description>Number of optional communication touchpoints offered, synced from the affiliate BTSP packaging org.</description>
    <label>Communication Optional Offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>