force-app/main/default/objects/Affiliate_Participation_Sync__e/fields/Non_Core_Programming_Days_Attended__c.field-meta.xml
<CustomField>
    <fullName>Non_Core_Programming_Days_Attended__c</fullName>
    <description>Number of non-core programming days attended, synced from the affiliate BTSP packaging org.</description>
    <label>Non-Core Programming Days Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>