force-app/main/default/objects/Affiliate_Participation_Sync__e/fields/Participation_ID__c.field-meta.xml
<CustomField>
    <fullName>Participation_ID__c</fullName>
    <description>The Salesforce Record ID of the Participation__c record in the National org that this event data should be applied to.</description>
    <label>Participation ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>