force-app/main/default/objects/Affiliate_Participation_Sync__e/fields/Source_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Contact_ID__c</fullName>
    <description>Contact ID from the affiliate org, used to match against Integration Key records.</description>
    <label>Source Contact ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>