force-app/main/default/objects/Affiliate_Participation_Sync__e/fields/Source_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Org_ID__c</fullName>
    <description>Org ID of the affiliate that published this event, used to match against Integration Key records.</description>
    <label>Source Org ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>