force-app/main/default/objects/Affiliate_Participation_Sync__e/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>Free-text term value from the affiliate org (e.g., 2024/2025 SY). Validated and normalized by the sync handler.</description>
    <label>Term</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>