force-app/main/default/objects/Affiliate_Participation_Sync__e/fields/X1_1_Core_Attended__c.field-meta.xml
<CustomField>
    <fullName>X1_1_Core_Attended__c</fullName>
    <description>Number of core 1:1 touchpoints attended, synced from the affiliate BTSP packaging org.</description>
    <label>1:1 Core Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>